--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/midNight-jam/Component_3_281#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "http": "0.0.0",
+    "node-mysql": "^0.4.2",
     "routes": "^2.1.0"
   }
 }
